components/datagrid/datagrid-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: datagrid
  namespace: $(NS_BOBBYCAR)
  labels:
    clusterName: bobbycar-dg
    infinispan_cr: bobbycar-dg
spec:
  to:
    kind: Service
    name: bobbycar-dg
    weight: 100
  port:
    targetPort: 11222
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
